<resources>
    <string name="app_name">享乐</string>

    <!-- test string start -->
    <string name="music_name">享乐</string>
    <string name="music_artist">浸入音乐的世界</string>
    <string name="no_lyric">无可用歌词</string>
    <!-- test string end -->

    <!-- NavigationView Text start -->
    <string name="nav_text_home_page">首页</string>
    <string name="nav_text_all_music">曲目</string>
    <string name="nav_text_album">专辑</string>
    <string name="nav_text_artist">艺术家</string>
    <string name="nav_text_folder">文件夹</string>
    <string name="nav_text_play_list">播放队列</string>
    <string name="nav_text_song_list">歌单</string>
    <string name="nav_text_settings">设置</string>
    <string name="nav_text_about">关于</string>
    <string name="nav_text_other">其他</string>
    <!-- NavigationView Text end -->

    <!-- HomePage Text start -->
    <string name="recent_added">近期添加</string>
    <string name="random_play">随机播放</string>
    <string name="no_music_in_device">设备中没有音乐…</string>
    <!-- HomePage Text end -->

    <!-- MusicCategory Text start -->
    <string name="music_category_fragment_title">媒体库</string>
    <string name="all_music">曲目</string>
    <string name="album">专辑</string>
    <string name="artist">艺术家</string>
    <string name="folder">文件夹</string>
    <string name="song_list">歌单</string>
    <string name="no_music_tip">该设备没有音乐…</string>
    <string name="no_album_tip">该设备没有专辑…</string>
    <string name="no_artist_tip">该设备没有艺术家…</string>
    <string name="no_folder_tip">没有可供展示的项目…</string>
    <!-- MusicCategory Text end -->

    <!-- PlayList Text start -->
    <string name="play_list_fragment_title">播放队列</string>
    <string name="no_music_in_play_list_tip">播放队列为空…</string>
    <!-- PlayList Text end -->

    <!-- Settings Text start -->
    <string name="settings_fragment_title">设置</string>
    <!-- Settings Text end -->

    <!-- About Text start -->
    <string name="about_fragment_title">关于</string>
    <string name="about_enjoymusic">关于享乐</string>
    <string name="current_version">当前版本</string>
    <string name="current_version_value">v1.0</string>
    <string name="share">分享</string>
    <string name="like">点个赞呗</string>
    <string name="go_to_repo">前往项目Star或者Fork鼓励作者</string>
    <string name="repo_url">https://github.com/zkw012300/EnjoyMusic</string>
    <string name="about_author">关于作者</string>
    <string name="github">Github</string>
    <string name="github_url">https://github.com/zkw012300</string>
    <string name="blog">博客</string>
    <string name="blog_url">http://www.zspirytus.com/</string>
    <!-- About Text end -->

    <!-- MusicMetaData Text start -->
    <string name="music_meta_data_fragment_title">编辑音乐信息</string>
    <string name="music_meta_data_save">保存</string>
    <string name="music_meta_data_download_music_info">下载艺术家封面</string>
    <string name="music_meta_data_edit_info">编辑信息</string>
    <string name="music_meta_data_title">标题</string>
    <string name="music_meta_data_artist">艺术家</string>
    <string name="music_meta_data_album">专辑</string>
    <string name="music_meta_data_disk_number">光盘编号</string>
    <string name="music_meta_data_music_number">歌曲编号</string>
    <string name="music_meta_data_year">年</string>
    <string name="music_meta_data_genre">流派</string>
    <string name="music_meta_data_download">下载</string>
    <string name="music_meta_data_obtain_music_info">获取艺术家封面</string>
    <string name="music_meta_data_dialog_message">要放弃您所做的更改吗?</string>
    <string name="music_meta_data_dialog_ok">确定</string>
    <string name="music_meta_data_dialog_cancel">取消</string>
    <!-- MusicMetaData Text end -->

    <!-- MusicPlay Text start -->
    <string name="music_play_menu_edit_music_info">编辑音乐信息</string>
    <string name="music_play_menu_audio_effect">音效设定</string>
    <string name="music_play_menu_lyric_download">下载歌词</string>
    <!-- MusicPlay Text end -->

    <!-- MusicPick Text start -->
    <string name="choose_song">选择曲目</string>
    <!-- MusicPick Text end -->

    <!-- PlayList Text start -->
    <string name="begin_playing">开始播放</string>
    <string name="clear_play_list">清空播放列表</string>
    <!-- PlayList Text end -->

    <!-- AudioEffect Text start -->
    <string name="audio_effect">音效</string>
    <string name="audio_effect_acoustic_echo_canceler">回声消除</string>
    <string name="audio_effect_automatic_gain_control">自动增益</string>
    <string name="audio_effect_noise_suppressor">噪声抑制</string>
    <string name="audio_effect_audio_field">音场</string>
    <string name="audio_effect_equalizer">均衡器</string>
    <string name="audio_effect_bass_boast">重低音调节器</string>
    <string name="audio_effect_reset">重置</string>
    <!-- AudioEffect Text end -->

    <!-- FilterMusicFragment Menu Text start -->
    <string name="add_to_play_queue">添加到播放队列</string>
    <string name="new_song_list">新建歌单</string>
    <string name="_number_of_music">首歌曲</string>
    <string name="_hour">小时</string>
    <string name="_min">分钟</string>
    <!-- FilterMusicFragment Menu Text end -->

    <!-- FilterAlbumListFragment start -->
    <string name="album_list">专辑列表</string>
    <string name="_number_of_album">张专辑</string>
    <!-- FilterAlbumListFragment end -->

    <!-- Search Text start -->
    <string name="search">搜索</string>
    <string name="no_search_result">未找到任何结果…</string>
    <!-- Search Text end -->

    <!-- PlayHistory Dialog Text start -->
    <string name="play_history">播放记录</string>
    <!-- PlayHistory Dialog Text end -->

    <!-- Toast tip start -->
    <string name="no_net_work_tip">无网络连接…</string>
    <string name="success">成功</string>
    <string name="failed">失败</string>
    <string name="please_enter_leagl_song_list">请输入歌单名称</string>
    <string name="no_artist_art_available">没有找到艺术家封面…</string>
    <string name="no_lyric_available">没有找到歌词…</string>
    <string name="download_success">下载成功</string>
    <string name="press_agin_to_exit">再按一次返回键以退出</string>
    <string name="play_list_is_empty">播放列表为空</string>
    <string name="download_failed">下载失败, 请稍后重试…</string>
    <string name="empty_song_list_name">歌单名称不能为空</string>
    <string name="empty_song_List">歌单不能为空</string>
    <string name="duplicate_song_list_name">重复歌单名称…</string>
    <string name="no_search_text">请输入需要搜索的文本…</string>
    <string name="invalid_file">无效文件…</string>
    <!-- Toast tip end -->

    <!-- SaveSongListDialog Text start -->
    <string name="create_new_song_list">创建新的歌单</string>
    <string name="create_new_song_list_hint">输入歌单名称…</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <!-- SaveSongListDialog Text end -->

    <!-- ProgressDialog Text start -->
    <string name="default_progress_text">请稍后…</string>
    <!-- ProgressDialog Text end -->

    <!-- PlayMode Text start -->
    <string name="list_loop_mode">列表循环</string>
    <string name="single_loop_mode">单曲循环</string>
    <string name="random_play_mode">随机播放</string>
    <!-- PlayMode Text end -->

    <!-- Permission Text start -->
    <string name="permission_dialog_title">提示</string>
    <string name="permission_denied_tip_text">享乐需要以下权限:\n\t1. 读写手机内置存储权限,以扫描音乐\n\t2. 录音权限,以实现音乐可视化.\n是否重新授权?</string>
    <string name="permission_never_ask_tip_text">享乐需要以下权限:\n\t1. 读写手机内置存储权限,以扫描音乐\n\t2. 录音权限,以实现音乐可视化.\n是否前往设置重新授权?</string>
    <!-- Permission Text end -->

    <!-- Download AlbumArt Text start -->
    <string name="download_album_art_or_not">是否下载专辑封面?</string>
    <!-- Download AlbumArt Text end -->

    <!-- Download ArtistArt Text start -->
    <string name="download_artist_art_or_not">是否下载艺术家封面?</string>
    <!-- Download ArtistArt Text end -->

    <!-- other start -->
    <string name="unknown">未知</string>
    <!-- other end -->

</resources>
