<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_page"
            android:title="@string/nav_text_home_page"
            android:icon="@drawable/ic_home_black_48dp" />
        <item
            android:id="@+id/nav_music_all"
            android:title="@string/nav_text_all_music"
            android:icon="@drawable/ic_library_music_black_48dp" />
        <item
            android:id="@+id/nav_music_album"
            android:title="@string/nav_text_album"
            android:icon="@drawable/ic_album_black_48dp" />
        <item
            android:id="@+id/nav_music_artist"
            android:title="@string/nav_text_artist"
            android:icon="@drawable/ic_record_voice_over_black_48dp" />
        <item
            android:id="@+id/nav_music_folder"
            android:title="@string/nav_text_folder"
            android:icon="@drawable/ic_folder_open_black_48dp" />
        <item
            android:id="@+id/nav_play_list"
            android:title="@string/nav_text_play_list"
            android:icon="@drawable/ic_playlist_play_black_48dp" />
    </group>

    <item android:title="@string/nav_text_other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/nav_text_settings"
                android:checkable="true"
                android:icon="@drawable/ic_settings_black_48dp" />
            <item
                android:id="@+id/nav_about"
                android:title="@string/nav_text_about"
                android:checkable="true"
                android:icon="@drawable/ic_copyright_black_48dp" />
        </menu>
    </item>

</menu>
